--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,7 @@
 <style>
     #nav{
-        background-color: #E42B2B;
+        /* background-color: #E42B2B; */
+        background-image: linear-gradient(19deg, #0081a7, rgb(0, 138, 171) 41.18%, #00afb9);
         height: 119px;
         padding: 8px;
         display: flex;
