--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <!-- <script type="./game/data.json"></script> -->
 <style>
     #nav{
-        background-color: #E42B2B;
+        /* background-color: #E42B2B; */
+        background-image: linear-gradient(19deg, #0081a7, rgb(0, 138, 171) 41.18%, #00afb9);
+        /* background-image: linear-gradient(320deg, #0081a7, rgb(0, 138, 171) 60.08%, #00afb9); */
         height: 119px;
         padding: 8px;
         display: flex;
@@ -95,7 +97,8 @@
 /* chunyi edit */
     #dashboard {
 		width: 130px;
-		background-color: #E42B2B;
+		/* background-color: #E42B2B; */
+        background-color: rgb(0, 130, 169);
 		padding: 20px 20px 0 10px;
 		position: absolute;
         top: 119px;
@@ -204,13 +207,13 @@
         $('#dashboard').hover(function(){
             $(this).stop().animate({
                 left:'0px',
-                backgroundColor:'#E42B2B'
+                backgroundColor:'rgb(0, 130, 169)'
                 //'background-color':
             }, 1000,);
         }, function(){
             $(this).stop().animate({
                 left:'-92px',
-                backgroundColor:'#E42B2B'
+                backgroundColor:'rgb(0, 130, 169)'
                 //'background-color':
             }, 1000, function(){
                 $('.main').effect('slide',{ direction: 'up' }, 800)	//文字滑出
@@ -281,7 +284,7 @@
     <div id="onlyCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="game/img/Fir_Per/garden.jpg" style="display: inline-block;" class="d-block w-100" alt="...">
+            <img src="game/img/action/super_mario.png" style="display: inline-block;" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="game/img/racing/disney.jpg" style="display: inline-block;" class="d-block w-100" alt="...">
