Update gameList.html: add mobile version

--- a/gameList.html
+++ b/gameList.html
@@ -84,7 +84,7 @@
             
             gameData.forEach(function(value, index){
                 console.log(value, index);
-                var newItem = '<div class="card col-lg-2">'+
+                var newItem = '<div class="card col-lg-2 col-12">'+
                     '<a href="./introduce.html' + '?category=' + category + '&which=' + index +'">'+ 
                     '<img src="./game/img/'+ value.img + '"' + 'class="card-img-top" alt="...">'+
                     '<div class="card-body">'+
